--- a/src/components/TeamSection/TeamSection.css
+++ b/src/components/TeamSection/TeamSection.css
@@ -12,10 +12,11 @@
 /* Title */
 .team-title {
   font-family: "Noyh";
-  font-size: 64px;
+  font-size: 86px;
   font-weight: 600;
   color: #121212;
   line-height: 1;
+  text-align: center;
   letter-spacing: -2px;
   margin: 0 0 60px 0;
 }
