--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -84,7 +84,7 @@
   position: absolute;
   top: 50%;
   left: -10%;
-  transform: translateY(-45%);
+  transform: translateY(-50%);
   height: 400px;
   width: 600px;
   border-radius: 16px;
@@ -94,8 +94,11 @@
 .arch__right .img-wrapper img {
   /* width: 100%;
   height: 800px; */
-  object-fit: contain;
-  object-position: center;
+  /* object-fit: cover;
+  object-position: center; */
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 @media (max-width: 900px) {
