added case studies

--- a/src/components/CalWidget/CalWidget2.css
+++ b/src/components/CalWidget/CalWidget2.css
@@ -224,8 +224,8 @@
     }
 
     .cal-embed-container {
-        min-height: 550px;
-        height: 550px;
+        min-height: min-content;
+
     }
 }
 
@@ -253,8 +253,7 @@
     }
 
     .cal-embed-container {
-        min-height: 450px;
-        height: 450px;
+        min-height: min-content;
     }
 }
 
