fix performance issues

--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;800&display=swap');
+/* Font loaded in index.html for better performance */
 
 .arch-container {
   color: #121212;
