--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -94,7 +94,7 @@
 .arch__right .img-wrapper img {
   /* width: 100%;
   height: 800px; */
-  /* object-fit: cover;
+  /* object-fit: covers;
   object-position: center; */
   width: 100%;
   height: auto;
