--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -101,9 +101,10 @@
   display: block;
 }
 
-@media (max-width: 900px) {
+@media (min-width: 700px) {
   .arch {
     gap: 30px;
+    padding: 70px;
   }
 }
 
