--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -389,9 +389,21 @@ body {
 
 @media (min-width: 992px) {
   .heroSection {
-    padding-top: 5rem;
+    padding-top: 10rem;
+    height: 50vh;
     padding-bottom: 3rem;
   }
+}
+
+
+@media (min-width: 1200px) {
+  .heroSection {
+    padding-top: 2rem;
+    height: 100vh;
+    padding-bottom: 3rem;
+  }
+
+
 
   .heroTitle {
     margin-top: 2rem;
@@ -841,6 +853,40 @@ body {
   color: #adb5bd !important;
 }
 
+@media (max-width: 1200px) {
+  .heroImageContainer {
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
+    padding: 0 0.5rem;
+  }
+
+  .heroTitle {
+    text-align: center;
+    font-size: 3rem;
+    margin-top: 5rem;
+  }
+
+  .heroDescription {
+    min-width: 100%;
+    text-align: center;
+    font-size: 1.7rem;
+    margin-top: 1rem;
+
+  }
+
+  .ctaGroup {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+    overflow: visible;
+  }
+
+}
 
 
 @media (max-width: 576px) {
