--- a/src/components/ConnectSection/ConnectSection.css
+++ b/src/components/ConnectSection/ConnectSection.css
@@ -1,11 +1,11 @@
 .connect-section {
   background-color: #fff;
-  padding: 100px 0;
+  padding: 60px 0;
   overflow: hidden;
   margin-top: 50px;
 }
 
-.label-text-s {
+.label-text-c {
   font-size: 18px;
   letter-spacing: 1.5px;
   text-align: center;
@@ -23,24 +23,10 @@
 /* Header */
 .connect-header {
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
-.connect-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 20px;
-}
 
-.connect-label span {
-  font-family: 'Noyh';
-  font-size: 20px;
-  font-weight: 600;
-  color: #666;
-  letter-spacing: 2px;
-}
 
 .connect-title {
   font-family: 'Noyh';
