--- a/src/components/FooterSection/FooterSection.css
+++ b/src/components/FooterSection/FooterSection.css
@@ -85,15 +85,15 @@
 
 .footer-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: 1.5fr 3fr;
   gap: 5rem;
   margin-bottom: 3rem;
 }
 
 .footer-links-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 6rem;
   width: 100%;
 }
 
@@ -199,6 +199,7 @@
 .copyright {
   color: #666;
   font-size: 13px;
+
   margin: 0;
 }
 
@@ -232,7 +233,7 @@
   align-items: center;
   padding-top: 20px;
   border-top: 1px solid #333;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .social-links {
@@ -299,7 +300,7 @@
 
 @media (max-width: 1200px) {
   .footer-grid {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     gap: 40px;
   }
 
@@ -366,8 +367,12 @@
   }
 
   .footer-grid {
-    grid-template-columns: 1fr 1fr;
+
     gap: 30px;
+  }
+
+  .footer-links-container {
+    margin-left: 24px;
   }
 
   .footer-bottom {
@@ -391,10 +396,22 @@
     font-size: 26px;
   }
 
+  .copyright {
+    margin-top: 20px;
+  }
+
   .footer-grid {
     grid-template-columns: 1fr;
     gap: 30px;
     text-align: center;
+  }
+
+  .footer-logo {
+    margin-left: 8%;
+  }
+
+  .footer-links-container {
+    margin-left: 40px;
   }
 
   .footer-logo-col {
