--- a/src/components/ArchitectureShowcase/ArchitectureShowcase.css
+++ b/src/components/ArchitectureShowcase/ArchitectureShowcase.css
@@ -10,6 +10,16 @@
   width: 100%;
 }
 
+.arch__right .img-wrapper:last-child {
+  top: 49%;
+  height: 380px;
+}
+
+/* .arch__right .img-wrapper:nth-last-child(2) {
+  top: 50%;
+} */
+
+
 .arch {
   display: flex;
   gap: 60px;
