--- a/src/components/GameShowcaseSection/GameShowcaseSection.css
+++ b/src/components/GameShowcaseSection/GameShowcaseSection.css
@@ -174,6 +174,11 @@
   box-sizing: border-box;
 }
 
+.row.g-4::before {
+ 
+  background: none;
+
+}
 .mobile-frame::before {
   content: '';
   position: absolute;
